# PRJ_SCRAPING_ISS_FORTALEZA

./: .dockerignore  .env-exaple  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  pyproject.toml  requirements.txt
.astro/: config.yaml  dag_integrity_exceptions.txt  test_dag_integrity_default.py
dags/: emissao_nfse.py  extracao_nfse.py
src/nfs_fortaleza/: __init__.py  batch.py  cli.py  config.py  extraction.py  issuance.py  load.py  nfse_xml.py  periods.py  portal.py  spreadsheet.py
tests/: test_batch.py  test_extraction.py  test_issuance.py  test_nfse_by_number.py
